--- a/circle.yml
+++ b/circle.yml
@@ -13,7 +13,8 @@ dependencies:
 
 test:
   override:
-    - ./gradlew check jacocoTestReport
+    - ./gradlew check
+    - ./gradlew jacocoTestReport
 
   post:
     - 'find . -type f -name "*.xml" | grep "build/test-results" | xargs cp -t $CIRCLE_TEST_REPORTS/'
