--- a/build.gradle
+++ b/build.gradle
@@ -34,6 +34,11 @@ subprojects {
 		jcenter()
 	}
 
+        test {
+                maxHeapSize = "1024m"
+                jvmArgs "-XX:MaxPermSize=256m"
+        }
+
 	jacocoTestReport {
 		reports {
 			xml.enabled true
