--- a/circle.yml
+++ b/circle.yml
@@ -3,6 +3,7 @@ machine:
     version:
       oraclejdk8
   environment:
+    TERM: dumb
     JAVA_OPTS: -Djava.awt.headless=true -server -Xmx1G
     GRADLE_OPTS: '-Xmx256M -Dorg.gradle.daemon=false -Dorg.gradle.jvmargs="-Xmx256M -XX:+HeapDumpOnOutOfMemoryError"'
 
